--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,25 @@
   --color-3b4149: #3b4149;
   --color-febd69: #febd69;
   --color-232f3e: #232f3e;
+  --color-bf4800: #bf4800;
+  --color-f5f5f7: #f5f5f7;
+  --color-777777: #777777;
+  --color-1c1c1b: #1c1c1b;
 }
-
+.section-heading {
+  font-size: 26px;
+  line-height: 32px;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+.card-wrapper {
+  background: white;
+  box-shadow: 0 0 10px #0000001a;
+  padding: 15px;
+}
 body {
   font-family: "Rubik", sans-serif;
 }
-
 a {
   text-decoration: none;
   display: inline-block;
@@ -23,21 +36,29 @@ a {
   box-shadow: none;
   border-color: inherit;
 }
-
 .gap-10 {
   gap: 10px;
 }
-
 .gap-15 {
   gap: 15px;
 }
-
 .gap-30 {
   gap: 30px;
 }
 
-/*Header Part*/
+.button {
+  background-color: var(--color-232f3e);
+  color: white;
+  font-size: 14px;
+  padding: 13px 33px;
+  border-radius: 25px;
+}
+.button:hover {
+  background-color: var(--color-febd69);
+  color: #131921;
+}
 
+/*Header Part Start*/
 .header-top-strip {
   border-bottom: 1px solid var(--color-3b4149);
   background-color: var(--color-131921);
@@ -48,10 +69,10 @@ a {
 .header-bottom {
   background-color: var(--color-232f3e);
 }
-.header-upper .input-group-text {
+.input-group-text {
   background-color: var(--color-febd69);
 }
-.header-bottom .menu-links a,
+.menu-links a,
 .dropdown button {
   color: white;
   font-size: 14px;
@@ -60,23 +81,194 @@ a {
   letter-spacing: 0.3;
   text-transform: uppercase;
 }
-
-.header-bottom .dropdown button:focus {
+.dropdown button:focus {
   box-shadow: none;
 }
-
-.header-bottom .dropdown-menu {
+.dropdown-menu {
   background-color: var(--color-131921);
   width: 100%;
   transform: translate3d(0px, 57px, 0px);
 }
-.header-bottom .dropdown-item {
+.dropdown-item {
   padding: 20px;
   margin-bottom: 3px;
   border-bottom: 1px solid var(--color-3b4149);
 }
-.header-bottom .dropdown-item:hover {
+.dropdown-item:hover {
   background-color: transparent;
   color: var(--color-febd69) !important;
 }
-/*Header Part End here*/
+/*Header Part End*/
+
+/* Footer Part Start */
+footer {
+  background-color: var(--color-232f3e);
+}
+footer:not(:first-child) {
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+footer .input-group-text {
+  background-color: var(--color-232f3e);
+  color: white;
+  padding: 8px 17px;
+}
+
+/* Footer Part End */
+
+/* Homepage Start */
+
+.main-banner-content {
+  top: 10%;
+  left: 5%;
+}
+.main-banner-content h4 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+  color: var(--color-bf4800);
+}
+.main-banner-content h5 {
+  font-size: 52px;
+  font-weight: 500;
+  line-height: 64px;
+  letter-spacing: -2px;
+  text-transform: none;
+}
+
+.small-banner-content {
+  top: 25%;
+  left: 10%;
+}
+.small-banner-content h4 {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+  color: var(--color-bf4800);
+}
+.small-banner-content h5 {
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 32px;
+  letter-spacing: -2px;
+  text-transform: none;
+}
+
+.small-banner {
+  width: 49%;
+}
+
+/* Home Wrapper 2 Start */
+
+.home-wrapper-2 {
+  background-color: var(--color-f5f5f7);
+}
+
+/* Home Wrapper 2 End */
+
+/* Categories Start */
+
+.categories {
+  background-color: white;
+  box-shadow: 0 0 10px #0000001a;
+  padding: 15px;
+}
+.categories > div {
+  width: 25%;
+  padding: 10px 10px 10px 20px;
+}
+.categories > div > div {
+  width: 60%;
+}
+.categories > div:nth-child(1),
+.categories > div:nth-child(2),
+.categories > div:nth-child(3),
+.categories > div:nth-child(4) {
+  border-bottom: 1px solid #ededed;
+}
+.categories > div:nth-child(1),
+.categories > div:nth-child(2),
+.categories > div:nth-child(3) {
+  border-right: 1px solid #ededed;
+}
+.categories > div:nth-child(5),
+.categories > div:nth-child(6),
+.categories > div:nth-child(7) {
+  border-right: 1px solid #ededed;
+}
+/* Categories End */
+/* Homepage End */
+
+/* Blog Part Start */
+
+.blog-card {
+  background-color: white;
+  border-radius: 10px;
+}
+
+.blog-card img {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.blog-content {
+  padding: 15px;
+}
+
+.blog-content .date {
+  font-size: 13px;
+  line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 0;
+  font-weight: 400;
+  padding: 0;
+  color: var(--color-777777);
+}
+.blog-content h5 {
+  font-size: 18px;
+  color: var(--color-131921);
+}
+.blog-content p.desc {
+  color: #777777;
+  font-size: 13px;
+  line-height: 22px;
+}
+/* Blog Part End */
+
+/* Product Card Start */
+
+.product-card {
+  padding: 15px;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.product-card:hover .action-bar {
+  right: 13px;
+}
+.product-card .product-details h6 {
+  color: var(--color-bf4800);
+  font-size: 13px;
+}
+.product-card .product-details h5 {
+  font-size: 15px;
+  color: var(--color-1c1c1b);
+}
+.product-card .product-details p.price {
+  font-size: 16px;
+  color: var(--color-1c1c1b);
+}
+.action-bar {
+  top: 10%;
+  right: -20px;
+  transition: 0.3s;
+}
+.wishlist-icon {
+  top: 2%;
+  right: 15px;
+}
+/* Product Card End */
